--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "1.0.17",
     "react-scroll": "^1.7.11",
     "react-transition-group": "^2.5.3",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
